[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.3", features = [] }
tauri-plugin-log = "2"
tokio = { version = "1.35", features = ["full"] }
axum = { version = "0.7.4", features = ["multipart"] }
tower-http = { version = "0.5.0", features = ["fs", "cors"] }
rust-embed = "8.2.0"
reqwest = { version = "0.11.23", features = ["json", "stream", "blocking"] }
rustfft = "6.1.0"
num-complex = "0.4.4"
num-traits = "0.2.17"
flate2 = "1.0.28"
async-stream = "0.3.5"
tempfile = "3.9.0"
futures-util = "0.3.30"
mime_guess = "2.0.4"
